# DEEP-BASED-CLI

./: .env.example  .gitattributes  .gitignore  AI_SWARM_MISSION_SUMMARY.md  ANTHROPIC_COOKBOOK_UPGRADE_SUMMARY.md  CHANGELOG.md  CLAUDE_CODER_AGENT_README.md  CLAUDE_CODER_AGENT_SUMMARY.md  CLEANUP_SUMMARY.md  CODEBASE_ANALYSIS_SUMMARY.md  CODEBASE_REWRITE_SUMMARY.md  COMPREHENSIVE_CLEANUP_SUMMARY.md  CONSOLIDATION_SUMMARY.md  CRITICAL_FIXES_PHASE1_SUMMARY.md  DEBUG_FIXES_SUMMARY.md  DEEPSEEK_CLI_README.md  DEEPSEEK_CODER_FEATURES.md  Dockerfile.claude_coder  ENHANCED_FEATURES.md.backup  ENHANCEMENT_PLAN.md  ENHANCEMENT_SUMMARY.md  FINAL_CLEANUP_SUMMARY.md  FINAL_IMPROVEMENTS_SUMMARY.md  FINAL_SUMMARY.md  FINAL_SYSTEM_SUMMARY.md.backup  GEMINI_CLI_INTEGRATION.md  IMPROVEMENT_IMPLEMENTATION_PLAN.md  LICENSE  MODULAR_ARCHITECTURE_README.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  README_BASED_CODER.md  README_DEANNA_SYSTEM.md  README_DEANNA_SYSTEM.md.backup  README_DEEP_BASED_CODER.md  README_NODEJS.md  REFACTORING_PLAN.md  REWRITE_COMPLETION_SUMMARY.md  (+101 more)
DEEP-CLI/: .env.example  .gitignore  FEATURE_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  REFACTORING_SUMMARY.md  demo.py  pyproject.toml  requirements.txt  setup.py  test_deepcli.py  test_interactive.py  test_menu_coder.py
DEEP-CLI/src/deepcli/: __init__.py  main.py
DEEP-CLI/src/deepcli/agents/: __init__.py  coder.py
DEEP-CLI/src/deepcli/commands/: base.py  implement.py
DEEP-CLI/src/deepcli/core/: client.py  config.py  exceptions.py  models.py
DEEP-CLI/src/deepcli/memory/: manager.py
DEEP-CLI/src/deepcli/ui/: __init__.py  interactive.py  menu.py
DEEP-CLI/tests/: test_basic.py
config/: __init__.py  api_keys.py  api_keys.py.backup  deepcli_config.py  enhanced_config.json
data/: .gitkeep  deepcli_database.db  embedding_system.py  enhanced_db.json  local_embedding_system.py  memory_manager.py  simple_embedding_system.py  simple_test_db.json  transformers_embedding_system.py  unified_agent.db
docs/: IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  PLUGIN_DEVELOPMENT_GUIDE.md  README.md  advanced_cli_voice_integration_guide.md
examples/: __init__.py  chatbot_app.py  rag_demo.py  simple_usage.py  unified_agent_demo.py  web_api.py
examples.backup/: __init__.py  rag_demo.py.backup  unified_agent_demo.py.backup
logs/: .gitkeep
nodejs_agents/: deepseek-chat.js  package.json  test-deepseek.js  test-fim-prefix.js
public/: app.js  index.html  style.css
reports/: swarm_report_20250803_222145.json
rewrite_examples/: memory_manager_rewrite.py
scans/: codebase_scan_20250803_211600.json
scripts/: analyze-bundle.js
src/: ToolManager.ts  cli.ts  config.js  index.js  index.ts
tests/: sample.test.ts  test_calculus_agent.py
tools/: SUPER_AGENT_README.md  __init__.py  advanced_web_scraper.py  ai_agent_orchestrator.py  base_tool.py  cli_bridge.cpp  cli_runner.cpp  cli_webui_server.js  code_analyzer_tool.py  code_architecture_tool.py  code_generator_tool.py  data_analyzer_tool.py  (+32 more)
(+196 files in other folders)
